Fixes #28, the display of main page courses on ie11

--- a/styles.css
+++ b/styles.css
@@ -2438,6 +2438,7 @@ body {
 
 .course {
   position: relative;
+  width: 100%;
   max-width: 320px;
   margin: 0 auto;
   margin-bottom: 20px;
